test/link/rpn-bad-sym-id.asm
SECTION "bad", ROM0
ld a, FOO * 256
ld a, BAR * 256
